<resources>
    <string name="app_name">Happy Hunting</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="returning">"Welcome back"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button">Button</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="welcome_to_happy_hunting_start_by_clicking_the_button_below_to_create_your_account">Welcome to Happy Hunting! Start by clicking the button below to create your account.</string>
    <string name="create_account">Create Account or Sign In</string>
    <string name="go_to_map">Go To Map</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="messagewithlink"><a href="https://www.uber.com/">Get a ride using Uber</a></string>
    <string name ="Sorry">Sorry, that password does not match our records.
                Please Try Again</string>
    <string name="Closed">Closed</string>
    <string name= "permissions">"All the permissions are granted.."</string>
    <string name="special">"Special: "</string>
    <string name="start">"Start Time: "</string>
    <string name="end">"End Time: "</string>
    <string name="error">Error Occurred</string>
    <string name="Uber">Get a ride using Uber</string>
</resources>