...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PostLogin">

    <Button
        android:id="@+id/button4"
        android:layout_width="138dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="150dp"
        android:clickable="true"
        android:onClick="sendMessageLogin"
...
