<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uber="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <com.uber.sdk.android.rides.RideRequestButton
        android:id="@+id/currentLoc"
        android:layout_width="250sp"
        android:layout_height="75sp"
        android:layout_alignEnd="@id/map"
        android:layout_alignRight="@id/map"
        android:layout_alignBottom="@id/map"
        android:layout_marginRight="0sp"
        android:layout_marginBottom="0sp"
        uber:ub__style="black" />

    <!--<com.lyft.lyftbutton.LyftButton
        android:id="@+id/lyft_button"
        android:layout_width="250sp"
        android:layout_height="75sp"
        android:layout_alignEnd="@id/map"
        android:layout_alignRight="@id/map"
        android:layout_alignBottom="@id/map"
        android:layout_marginRight="0sp"
        android:layout_marginBottom="75sp"
         />-->


</RelativeLayout>